# strata-retrieval

./: .gitignore  README.md  pyproject.toml
src/strata/: app.py  checkpoint.py  cli.py  evalset.py  main.py  mcp.py  prompts.py  synthesis.py
src/strata/providers/: base.py  document.py  factory.py  record.py  sampler.py  store.py
src/strata/providers/mineru/: analyzer.py  chunk.py  document.py  ids.py  middle.py  store.py
src/strata/tests/: conftest.py  test_analyzer.py
src/strata/utils/: mixin.py  projects.py
tests/: __init__.py  base.py  conftest.py  test_analyzer.py  test_api.py
tests/manual/: test_mcp.md
