[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-retrieval"
version = "0.1.0"
description = "Tools-for-agent retrieval layer over MinerU parse artifacts, exposed via MCP/API/CLI"
requires-python = ">=3.11"
authors = [
    {name = "kenyo3026", email = "kenyo3026@gmail.com"}
]
keywords = ["rag", "retrieval", "mineru", "mcp", "agent", "document-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

# Core ingestion + structural tools are stdlib-only. Interface adapters add their
# own deps as they land (api -> fastapi/uvicorn, mcp -> mcp/fastmcp, visual ->
# pymupdf). Declared as optional groups so they stay opt-in.
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "ipykernel>=6.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
strata = "strata.cli:main"
strata-api = "strata.app:main"
strata-mcp = "strata.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
